# mach

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  example_nb.ipynb  justfile  pyproject.toml
bench/: render_bench.cpp
core/common/: concepts.hpp  constants.hpp  time.hpp
core/engine/: command.hpp  commands.hpp  engine.cpp  engine.hpp
core/graph/: connection_table.hpp
core/ipc/: spsc_queue.hpp
core/janitor/: janitor.hpp
core/memory/: node_pool.cpp  node_pool.hpp
core/nodes/: all_nodes.hpp  node.hpp  wavetable.hpp  wavetable_osc.cpp  wavetable_osc.hpp
core/nodes/master_output/: master_output.hpp
core/nodes/wavetable/: wavetable.hpp  wavetable_osc.cpp  wavetable_osc.hpp
core/scheduler/: scheduler.cpp  scheduler.hpp
docs/: research.md
examples/: Bb7_sine.py  sine.cpp
python/mach/: __init__.py  bind_common.hpp  bind_engine.cpp  bind_enums.cpp  bind_node_handle.cpp  bindings.cpp
tests/: .clang-tidy  main.cpp
tests/core/common/: time.cpp
tests/core/engine/: engine.cpp
tests/core/graph/: connection_table.cpp
tests/core/ipc/: spsc_queue.cpp
tests/core/janitor/: janitor.cpp
tests/core/memory/: node_pool.cpp
tests/core/nodes/master_output/: master_output.cpp
tests/core/nodes/wavetable/: wavetable.cpp  wavetable_osc.cpp
tests/core/scheduler/: scheduler.cpp
tests/python/: conftest.py  test_engine.py  test_enums.py  test_node_handle.py  test_time.py
