[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "mach-audio"
version = "0.1.0"
requires-python = ">=3.14"
description = "Headless programmatic audio engine"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/mach"]

[dependency-groups]
dev = ["pytest>=9.0"]
